--- a/src/components/pokemon-preview/pokemon-preview.styles.scss
+++ b/src/components/pokemon-preview/pokemon-preview.styles.scss
@@ -4,17 +4,40 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 3rem 0.5rem;
-}
-.pokemon-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.all-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+
+  .input-container {
+    width: 86%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    .input {
+      background-color: rgba($color: #b4c5db, $alpha: 0.8);
+      color: black;
+      margin-bottom: 2%;
+      font-size: 18px;
+      padding: 10px 10px 10px 5px;
+    }
+
+    .filter {
+      color: #b4c5db;
+      margin-bottom: 2%;
+      padding: 10px 10px 10px 5px;
+      cursor: pointer;
+    }
+  }
+
+  .pokemon-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .all-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
