--- a/src/components/filter-options/filter-options.styles.scss
+++ b/src/components/filter-options/filter-options.styles.scss
@@ -1,18 +1,23 @@
 .filter-container {
-  width: 86%;
-  height: 60vh;
+  width: 60%;
+  height: 55%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  align-items: space-between;
   justify-content: space-between;
+  align-content: space-between;
   font-size: large;
   background-color: rgba($color: #b4c5db, $alpha: 0.8);
+  position: absolute;
 
   .type-container {
     display: flex;
     flex-direction: column;
+    flex-flow: column wrap;
     align-content: flex-start;
     justify-content: flex-start;
+    height: 100%;
+    width: 40%;
     .types {
       display: flex;
       flex-direction: column;
@@ -28,6 +33,7 @@
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
+    width: 20%;
     .hp-values {
       display: flex;
       flex-direction: column;
@@ -43,6 +49,7 @@
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
+    width: 20%;
     .attack-values {
       display: flex;
       flex-direction: column;
@@ -58,6 +65,7 @@
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
+    width: 20%;
     .defense-values {
       display: flex;
       flex-direction: column;
@@ -66,11 +74,16 @@
       justify-content: flex-start;
       height: 80%
     }
+    .reset-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      Button {
+        font-size: 65%;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  .reset-button {
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-  }
 }
